--- a/logo.html
+++ b/logo.html
@@ -5,12 +5,13 @@
 
 @keyframes name1
 {
- 0% {width:50px ;height:500px;background-color:black ; left:500px;transform:rotate(-50deg)}
- 10% {width:50px ;height:500px;background-color:black ;left:500px;transform:rotate(50deg)}
- 40% {width:50px ;height:500px;background-color:black ;left:500px;transform:rotate(100deg)}
- 60% {width:50px ;height:500px;background-color:black ;left:500px;transform:rotate(120deg)}
- 80% {width:50px ;height:500px;background-color:black;left:500px ;transform:rotate(-80deg)}
- 100% {width:50px;height:500px; background-color:black;left:500px;transform:rotate(360deg)}
+ 0% {width:100px ;height:300px;background-color:red ; left:200px;transform:rotate(-50deg)}
+ 10% {width:100px ;height:300px;background-color:red ;left:200px;transform:rotate(50deg)}
+ 40% {width:100px ;height:300px;background-color:red ;left:200px;transform:rotate(100deg)}
+ 60% {width:100px ;height:300px;background-color:red ;left:200px;transform:rotate(150deg)}
+ 80% {width:100px ;height:300px;background-color:red;left:200px ;transform:rotate(200deg)}
+ 100% {width:100px;height:300px; background-color:red;left:200px;transform:rotate(-100deg)}
+
 }
 #div1{position:relative;
 animation:name1 1s 2s infinite;
